web-infras/parser/tests/fixtures/babel/es2015/let/invalid-escape/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,1)
1|le\u0074 x = 5
 |^
